tests/ui/derive/fail_validate_conditional_unknown_field.rs
use foundry::Validate;
use serde::Deserialize;

#[derive(Deserialize, Validate)]
struct InvalidConditionalRequest {
    #[validate(required_if("missing", "yes"))]
    note: Option<String>,
}

fn main() {}
